@@ -45,8 +45,11 @@ static void check_dns_listeners(struct daemon *daemon, fd_set *set, time_t now);
 static void sig_handler(int sig);
 static void manual_delete_lease(void);
 
-/* int main (int argc, char **argv) renamed to dnsmasq_main */
+#ifdef BUSYBOX
 int dnsmasq_main (int argc, char **argv)
+#else
+int main (int argc, char **argv)
+#endif
 {
   struct daemon *daemon;
   int bind_fallback = 0;
